# ipcore

./: MAP.md  pyproject.toml
ipcore_lib/generator/hdl/templates/: cocotb_test.py.j2
ipcore_tools/vscode/ipcore_editor/: README.md  package-lock.json  package.json  webpack.config.js
ipcore_tools/vscode/ipcore_editor/scripts/: sync-templates.js
ipcore_tools/vscode/ipcore_editor/src/commands/: GenerateCommands.ts
ipcore_tools/vscode/ipcore_editor/src/generator/: TemplateLoader.ts  VhdlGenerator.ts
ipcore_tools/vscode/ipcore_editor/src/generator/templates/: cocotb_test.py.j2  register_file.vhdl.j2
ipcore_tools/vscode/ipcore_editor/src/providers/: IpCoreEditorProvider.ts
ipcore_tools/vscode/ipcore_editor/src/services/: BusLibraryService.ts  ImportResolver.ts
ipcore_tools/vscode/ipcore_editor/src/webview/components/: AddressMapVisualizer.tsx  BitFieldVisualizer.tsx  RegisterMapVisualizer.tsx
