[project]
name = "ipcore_lib"
version = "0.1.0"
description = "A Python library for IP Core development and VHDL generation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jinja2",
    "rich",
    "openai",
    "python-dotenv",
    "pydantic",
    "PySide6",
    "pyyaml",
    "textual",
    "pyparsing",
    "dataclasses-json",
    "click",
    "cocotb>=2.0",
    "cocotbext-axi>=0.1.26",
]

[project.scripts]
ipcore = "scripts.ipcore:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
testpaths = ["ipcore_lib/tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "cocotb",
    "cocotb-bus",
    "cocotbext-axi"
]
dev = [
    "black",
    "mypy"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipcore_lib*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
